//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  firstName String
  lastName String
  image String
  sex String
  email String [unique]
  password String
  emailVerified DateTime
  nationalId String [unique]
  role Role [not null, default: 'PATIENT']
  accounts Account [not null]
  doctor doctors
  labAssistant lab_assistants
  labSupervisor lab_supervisors
  patient patients
  receptionist receptionists
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user users [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table verification_tokens {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table doctors {
  employeeId String [pk]
  employmentDate DateTime [default: `now()`, not null]
  user users [not null]
  visits visits [not null]
}

Table receptionists {
  employeeId String [pk]
  employmentDate DateTime [default: `now()`, not null]
  user users [not null]
  visits visits [not null]
}

Table lab_supervisors {
  employeeId String [pk]
  employmentDate DateTime [default: `now()`, not null]
  user users [not null]
  laboratoryExaminations laboratory_examinations [not null]
}

Table lab_assistants {
  employeeId String [pk]
  employmentDate DateTime [default: `now()`, not null]
  user users [not null]
  laboratoryExaminations laboratory_examinations [not null]
}

Table patients {
  patientId String [pk]
  insuranceId String [unique]
  user users [not null]
  visits visits [not null]
}

Table visits {
  visitId String [pk]
  description String
  diagnosis String
  status Status [not null, default: 'REGISTERED']
  date DateTime [not null]
  dateCreated DateTime [default: `now()`, not null]
  dateRealized DateTime
  doctorId String [not null]
  patientId String [not null]
  receptionistId String
  laboratoryExaminations laboratory_examinations [not null]
  physicalExaminations physic_examinations [not null]
  doctor doctors [not null]
  patient patients [not null]
  receptionist receptionists
}

Table physic_examinations {
  physicalExamId String [pk]
  dictionaryCode Int [not null]
  visitId String [not null]
  status ExaminationStatus [not null, default: 'COMPLETED']
  examinationDictionary examination_dictionaries [not null]
  visit visits [not null]
}

Table laboratory_examinations {
  testId String [pk]
  doctorNote String
  labTechnicianNote String
  supervisorNote String
  status LaboratoryTestStatus [not null, default: 'ORDERED']
  dateOfExecutionXorCancelling DateTime
  dateOfApprovalXorRejection DateTime
  dictionaryCode Int [not null]
  labAssistantId String
  labSupervisorId String
  visitId String
  examinationDictionary examination_dictionaries [not null]
  labAssistant lab_assistants
  labSupervisor lab_supervisors
  visit visits
}

Table examination_dictionaries {
  code Int [pk, increment]
  type String [not null]
  description String
  LaboratoryExamination laboratory_examinations [not null]
  PhysicalExamination physic_examinations [not null]
}

Enum Role {
  PATIENT
  DOCTOR
  LAB_SUPERVISOR
  LAB_ASSISTANT
  RECEPTIONIST
  ADMIN
}

Enum Status {
  REGISTERED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

Enum ExaminationStatus {
  COMPLETED
  CANCELLED
}

Enum LaboratoryTestStatus {
  ORDERED
  COMPLETED
  CANCELLED
  APPROVED
  REJECTED
  IN_PROGRESS
}

Ref: Account.userId > users.id [delete: Cascade]

Ref: doctors.employeeId - users.id [delete: Cascade]

Ref: receptionists.employeeId - users.id [delete: Cascade]

Ref: lab_supervisors.employeeId - users.id [delete: Cascade]

Ref: lab_assistants.employeeId - users.id [delete: Cascade]

Ref: patients.patientId - users.id [delete: Cascade]

Ref: visits.doctorId > doctors.employeeId

Ref: visits.patientId > patients.patientId

Ref: visits.receptionistId > receptionists.employeeId

Ref: physic_examinations.dictionaryCode > examination_dictionaries.code

Ref: physic_examinations.visitId > visits.visitId [delete: Cascade]

Ref: laboratory_examinations.dictionaryCode > examination_dictionaries.code

Ref: laboratory_examinations.labAssistantId > lab_assistants.employeeId [delete: Cascade]

Ref: laboratory_examinations.labSupervisorId > lab_supervisors.employeeId [delete: Cascade]

Ref: laboratory_examinations.visitId > visits.visitId